--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,8 +27,36 @@
 
 <body>
     <header class="justify-content-center mb-5">
-        <a class="header-title" href="/">Democary Now</a>
+        <div class="container-fluid p-5 text-center" style=" background: radial-gradient(circle, #625fff, #7bcefe);; box-shadow: 0px 4px 10px rgba(0,0,0,0.3);">
+            <a class="header-title text-white text-decoration-none" href="/" style="font-size: 2.5rem; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">
+                <i class="bi bi-star-fill"></i> Democary Now
+            </a>
+        </div>
     </header>
-</body>
 
-</html>
+    <!-- Centering the content -->
+    <div class="container d-flex justify-content-center align-items-center" style="min-height: 20vh;">
+        <div>
+            <h2 class="text-center">Login</h2>
+
+            <!-- E-mail login -->
+            <div class="form-group">
+                <label for="e-mail"></label>
+                <h5 class="text-center">Enter E-Mail</h5>
+                <div class = "col-md-12">
+                    <input type="text" class="form-control" id="e-mail" placeholder="Enter e-mail" required>
+            </div>
+
+            <!-- Password login -->
+            <div class="form-group">
+                <label for="Password"></label>
+                <h5 class="text-center">Enter Password</h5>
+                <div class = "col-md-12">
+                    <input type="password" class="form-control" id="Password" placeholder="Enter Password" required>
+            </div>
+        </div>
+    </div>
+     <div class="d-flex justify-content-center align-items-center" style="height: 8vh;">
+    <button type="button" class="btn btn-success">Sign in</button>
+    </div>
+</body>
