Register account page created by Oscar and Felix

--- a/src/main/resources/static/experiment.html
+++ b/src/main/resources/static/experiment.html
@@ -32,13 +32,13 @@
                       <a class="nav-link active" aria-current="page" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Register</a>
+                        <a class="nav-link active" aria-current="page" href="register.html">Register</a>
                       </li>
                     </li>
                   </ul>
                   <!--Login-->
                 <div class="d-flex justify-content-center align-items-center gap-3" >
-                <a href="Login" class="text-white text-decoration-none px-3 py-1 bg-primary rounded-4">Login</a>
+                <a href="index.html" class="text-white text-decoration-none px-3 py-1 bg-primary rounded-4">Login</a>
                 </div>
                 </div>
               </div>
