--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -18,7 +18,7 @@
 
     <!-- Navigation Script -->
     <script type="module">
-        if (localStorage.uuid && localStorage.user) window.location.replace("/something.html");
+        if (localStorage.uuid) window.alert("You are logged in!");
     </script>
 
     <!-- Alpine JavaScript -->
