--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -134,8 +134,7 @@
             fetch("register", {
                 method: "POST",
                 body: JSON.stringify({
-                    fname: fname,
-                    lname: lname,
+                    name: fname+" "+lname,
                     id: id,
                     password: pass,
                     region: region,
@@ -152,9 +151,10 @@
                 }
 
                 localStorage.setItem("uuid", data.uuid);
-                localStorage.setItem("user", JSON.stringify(data.data));
-                localStorage.initial = "YESSIR!";
-                window.location.replace("/portfolio.html");
+                //localStorage.setItem("user", JSON.stringify(data.data));
+                //localStorage.initial = "YESSIR!";
+                //window.location.replace("/portfolio.html");
+                window.alert("You are logged in with id: " + data.uuid)
             });
         }
     </script>
