Manually merge from frontend
Happening during weekend so its fine to push to main

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,14 +18,14 @@
 
     <!-- Navigation Script -->
     <script type="module">
-        if (localStorage.uuid) window.alert("You are logged in!");
+        if (localStorage.uuid) window.location.replace("/polls.html");
     </script>
 
     <!-- Alpine JavaScript -->
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/logreg.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
