--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -18,15 +18,14 @@
 
     <!-- Navigation Script -->
     <script type="module">
-        if (localStorage.uuid) window.alert("You are logged in!");
-        //window.location.replace("/something.html");
+        if (localStorage.uuid) window.location.replace("/polls.html");
     </script>
 
     <!-- Alpine JavaScript -->
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/logreg.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -44,7 +43,7 @@
         </div>
 
         <h2 class="mb-2">Login</h2>
-        <form x-data="{ id:'', pass:'' }" onSubmit="return false;">
+        <form class="sft" x-data="{ id:'', pass:'' }" onSubmit="return false;">
             <!-- ID num input -->
             <label class="form-label">Personal Identity Number</label>
             <div class="form-group mb-4">
@@ -88,10 +87,7 @@
                 }
 
                 localStorage.setItem("uuid", data.uuid);
-                //localStorage.setItem("user", JSON.stringify(data.data));
-                //localStorage.initial = "YESSIR!";
-                //window.location.replace("/something.html");
-                window.alert("You are logged in with id: " + data.uuid)
+                window.location.replace("/polls.html");
             });
         }
 
