--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -18,14 +18,14 @@
 
     <!-- Navigation Script -->
     <script type="module">
-        if (localStorage.uuid) window.alert("You are logged in!");
+        if (localStorage.uuid) window.location.replace("/polls.html");
     </script>
 
     <!-- Alpine JavaScript -->
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/logreg.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
         </div>
 
         <h2 class="mb-2 title">Register</h2>
-        <form x-data="{ fname:'', lname:'', id:'', pass:'', rpass:'', region:'', muni: '' }"
+        <form class="sft" x-data="{ fname:'', lname:'', id:'', pass:'', rpass:'', region:'', muni: '' }"
             x-init="$watch('region', value => muni = '')" onSubmit="return false;">
             <label class="form-label">Name</label>
             <div class="input-group mb-4">
@@ -151,10 +151,7 @@
                 }
 
                 localStorage.setItem("uuid", data.uuid);
-                //localStorage.setItem("user", JSON.stringify(data.data));
-                //localStorage.initial = "YESSIR!";
-                //window.location.replace("/portfolio.html");
-                window.alert("You are logged in with id: " + data.uuid)
+                window.location.replace("/polls.html");
             });
         }
     </script>
