--- a/src/main/resources/static/polls.html
+++ b/src/main/resources/static/polls.html
@@ -165,6 +165,7 @@
                     <option>Active</option>
                     <option>Past</option>
                     <option>Future</option>
+                    <option>All</option>
                 </select>
                 <select class="form-select mb-3" style="width: 140px;" x-model="level" @change="getPolls(level, status);">
                     <option>National</option>
@@ -252,18 +253,16 @@
 
                 var poll = polls[index];
                 var pills = `<span class="badge rounded-pill" style="background-color: rgb(0, 104, 161);">Voted</span>`;
-                var greyTextPre = "";
-                var greyTextDate = "";
+                var greyText = "";
                 if (pollsStatus == "Past") {
-                    greyTextPre = "Ended on";
-                    var greyTextDate = poll.endDate;
+                    greyText = "Ended on: " + poll.endDate;
                 } else if (pollsStatus == "Active") {
-                    greyTextPre = "Ends";
-                    var greyTextDate = poll.endDate;
+                    greyText = "Ends: " + poll.endDate;
                 } else if (pollsStatus == "Future") {
-                    greyTextPre = "Starts on";
-                    var greyTextDate = poll.startDate;
-                }
+                    greyText = "Starts on: " + poll.startDate;
+                } else if (pollsStatus == "All") {
+                    greyText = poll.startDate + " to " + poll.endDate;
+                } 
                 var pollText = ` <a onclick="openPoll(${poll.id})" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="rgb(0, 104, 161)"
                     class="bi bi-bank flex-shrink-0" viewBox="0 0 16 16">
@@ -273,7 +272,7 @@
                             <h6 class="mb-0">${poll.title}</h6>
                             <p class="mb-2 opacity-75">${poll.body}</p>
                         </div>
-                        <small class="opacity-50 text-nowrap only-desktop">${greyTextPre}: ${poll.endDate}</small>
+                        <small class="opacity-50 text-nowrap only-desktop">${greyText}</small>
                     </div>
                     <div style="position: absolute; bottom: 5px; right: 5px;">
                     ${pills}
