--- a/src/main/resources/static/polls.html
+++ b/src/main/resources/static/polls.html
@@ -161,13 +161,15 @@
         <div class="d-flex justify-content-between align-items-center">
             <h2 class="mb-3">Polls</h2>
             <div class="d-flex gap-2">
-                <select class="form-select mb-3" style="width: 110px;" x-model="status" @change="getPolls(level, status);">
+                <select class="form-select mb-3" style="width: 110px;" x-model="status"
+                    @change="getPolls(level, status);">
                     <option>Active</option>
                     <option>Past</option>
                     <option>Future</option>
                     <option>All</option>
                 </select>
-                <select class="form-select mb-3" style="width: 140px;" x-model="level" @change="getPolls(level, status);">
+                <select class="form-select mb-3" style="width: 140px;" x-model="level"
+                    @change="getPolls(level, status);">
                     <option>National</option>
                     <option>Regional</option>
                     <option>Municipal</option>
@@ -206,6 +208,7 @@
         var pollsLevel = "National";
 
         function createPoll({ level, title, body, startDate, endDate }) {
+
             fetch(`/create-poll?uuid=${localStorage.uuid}`, {
                 method: "POST",
                 body: JSON.stringify({
@@ -262,7 +265,7 @@
                     greyText = "Starts on: " + poll.startDate;
                 } else if (pollsStatus == "All") {
                     greyText = poll.startDate + " to " + poll.endDate;
-                } 
+                }
                 var pollText = ` <a onclick="openPoll(${poll.id})" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="rgb(0, 104, 161)"
                     class="bi bi-bank flex-shrink-0" viewBox="0 0 16 16">
@@ -296,31 +299,34 @@
                 document.getElementById('view-poll-start-date').value = poll.startDate;
                 document.getElementById('view-poll-end-date').value = poll.endDate;
 
-                var xValues = ["Against", "Blank", "Favor"];
-                var yValues = [10, 25, 5];
-                //var yValues = [poll.against, poll.blank, poll.favor];
-                var barColors = [
-                    "#db3545",
-                    "#0068a1",
-                    "#1a8754",
-                ];
+                if (!(new Date(poll.startDate) > new Date())) {
+                    var xValues = ["Against", "Blank", "Favor"];
+                    var yValues = [10, 25, 5];
+                    //var yValues = [poll.against, poll.blank, poll.favor];
+                    var barColors = [
+                        "#db3545",
+                        "#0068a1",
+                        "#1a8754",
+                    ];
 
-                new Chart("votesChart", {
-                    type: "pie",
-                    data: {
-                        labels: xValues,
-                        datasets: [{
-                            backgroundColor: barColors,
-                            data: yValues
-                        }]
-                    },
-                    options: {
-                        title: {
-                            display: true,
-                            text: "Voting distribution"
+                    new Chart("votesChart", {
+                        type: "pie",
+                        data: {
+                            labels: xValues,
+                            datasets: [{
+                                backgroundColor: barColors,
+                                data: yValues
+                            }]
+                        },
+                        options: {
+                            title: {
+                                display: true,
+                                text: "Voting distribution"
+                            }
                         }
-                    }
-                });
+                    });
+                    votesChart.style.display = 'block';
+                } else votesChart.style.display = 'none';
 
                 viewPollModal.show();
             }
