--- a/src/main/resources/static/news.html
+++ b/src/main/resources/static/news.html
@@ -132,7 +132,8 @@
                 .then(data => {
                     data.forEach(element => {
                         const newsElement = document.createElement('div');
-                        newsElement.className = 'news-item';
+                        newsElement.className = 'news-item'
+                        newsElement.id = `news-item-${element.id}`
                         newsElement.innerHTML = `
                         <div class="card">
                             <div class="card-body">
@@ -143,14 +144,39 @@
                                         <p class="card-text"><small class="text-muted">${element.date}</small></p>
                                     </div>
                                     <div class="mt-3">
-                                        <button type="button" class="btn bg-success rounded text-white" @click="voteFavor(${element.id}, true)">${element.favorable} Favor</button>
-                                        <button type="button" class="btn bg-danger rounded text-white" @click="voteFavor(${element.id}, false)">${element.unfavorable} Unfavor</button>
+                                        <button type="button" class="btn bg-success rounded text-white" @Click="voteFavor(${element.id}, true)">${element.favorable} Favor</button>
+                                        <button type="button" class="btn bg-danger rounded text-white" @Click="voteFavor(${element.id}, false)">${element.unfavorable} Unfavor</button>
                                     </div>
                                 </div>
                             </div>
                         </div>`;
                         newsContainer.appendChild(newsElement);
                     });
+                })
+        }
+
+        function UpdateNewsCard(id) {
+            fetch(`/single-news?news=${id}`, {
+                method: "GET"
+            }).then(response => { return response.json(); })
+                .then(data => {
+                    const newsElement = document.getElementById(`news-item-${id}`);
+                    newsElement.innerHTML = `
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">${data.title}</h5>
+                                <p class="card-text">${data.body}</p>
+                                <div class="d-flex justify-content-between align-items-start">
+                                    <div>
+                                        <p class="card-text"><small class="text-muted">${data.date}</small></p>
+                                    </div>
+                                    <div class="mt-3">
+                                        <button type="button" class="btn bg-success rounded text-white" @Click="voteFavor(${data.id}, true)">${data.favorable} Favor</button>
+                                        <button type="button" class="btn bg-danger rounded text-white" @Click="voteFavor(${data.id}, false)">${data.unfavorable} Unfavor</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>`;
                 })
         }
 
@@ -165,7 +191,7 @@
                     "Content-type": "application/json; charset=UTF-8"
                 }
             }).then((response) => response.json()).then((data) => {
-                showNews()
+                UpdateNewsCard(id)
             });
         }
 
