--- a/src/main/resources/static/news.html
+++ b/src/main/resources/static/news.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Democracy Now - Create proposal</title>
+    <title>Democracy Now - News</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +18,15 @@
 
     <!-- Navigation Script -->
     <script type="module">
-        if (localStorage.uuid) console.log("You are logged in!");
+        if (!localStorage.uuid) window.location.replace("/login.html");
+
+        var response = await(await fetch('/check-login-status?uuid=' + localStorage.uuid)).json();
+        if (response.success == false) {
+            localStorage.clear();
+            window.location.replace("/login.html");
+        } else {
+            localStorage.user = JSON.stringify(response.data);
+        }
     </script>
 
     <!-- Alpine JavaScript -->
@@ -32,8 +40,11 @@
     <header class="rubik">
         <div class="inner">
             <a class="header-title" href="/">Democracy Now</a>
+            <a class="header-link" href="/polls.html">Polls</a>
             <div class="desktop-header-links">
                 <a class="header-link" data-bs-toggle="modal" data-bs-target="#post-news-modal">Post News</a>
+                <a class="header-link header-link2"
+                    onclick="localStorage.clear(); window.location.replace('/login.html');">Logout</a>
             </div>
             <div class="dropdown text-end mobile-header-nav">
                 <a href="#" class="d-block link-body-emphasis text-decoration-none" data-bs-toggle="dropdown"
