--- a/src/main/resources/static/news.html
+++ b/src/main/resources/static/news.html
@@ -145,26 +145,7 @@
                         const newsElement = document.createElement('div');
                         newsElement.className = 'news-item'
                         newsElement.id = `news-item-${element.id}`
-                        newsElement.innerHTML = `
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">${element.title}</h5>
-                                <p class="card-text">${element.body}</p>
-                                <div class="d-flex justify-content-between align-items-start">
-                                    <div>
-                                        <p class="card-text"><small class="text-muted">${element.date}</small></p>
-                                    </div>
-                                    <div class="mt-3">
-                                        <button type="button" class="btn bg-success rounded text-white" onClick="voteFavor(${element.id}, true)">${element.favorable} Favor</button>
-                                        <button type="button" class="btn bg-danger rounded text-white" onClick="voteFavor(${element.id}, false)">${element.unfavorable} Unfavor</button>
-                                    </div>
-                                </div>
-                                <div class="mt-3">
-                                    <button type="button" class="btn btn-primary" onClick="showComments(${element.id})">💬</button>
-                                    <button type="button" class="btn btn-primary" onClick="showComments(${element.id})">Add comment</button>
-                                </div>
-                            </div>
-                        </div>`;
+                        newsElement.innerHTML = generateCard(element);
                         newsContainer.appendChild(newsElement);
                     });
                 })
@@ -175,10 +156,13 @@
                 method: "GET"
             }).then(response => { return response.json(); })
                 .then(data => {
-                    const element = data
                     const newsElement = document.getElementById(`news-item-${id}`);
-                    newsElement.innerHTML = `
-                        <div class="card">
+                    newsElement.innerHTML = generateCard(data)
+                })
+        }
+
+        function generateCard(element) {
+            return `    <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">${element.title}</h5>
                                 <p class="card-text">${element.body}</p>
@@ -193,25 +177,41 @@
                                 </div>
                                 <div class="mt-3">
                                     <button type="button" class="btn btn-primary" onClick="showComments(${element.id})">💬</button>
-                                    <button type="button" class="btn btn-primary" onClick="showComments(${element.id})">Add comment</button>
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#commentModal${element.id}">Add comment</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal fade" x-data="{ id:'${element.id}', body:'' }" id="commentModal${element.id}" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="commentModalLabel">Add a Comment</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <textarea x-model="body" class="form-control" placeholder="Enter your comment..." rows="3"></textarea>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary" @click="postComment($data)">Post Comment</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>`;
-                })
         }
 
         function postComment({ id, body }) {
             fetch(`/post-comment?uuid=${localStorage.uuid}`, {
                 method: "POST",
                 body: JSON.stringify({
-                    news: id,
-                    body: body
+                    newsId: id,
+                    comment: body
                 }),
                 headers: {
                     "Content-type": "application/json; charset=UTF-8"
                 }
             }).then((response) => response.json()).then((data) => {
-
+                bootstrap.Modal.getInstance(document.getElementById(`commentModal${id}`)).hide();
             });
         };
 
