--- a/src/main/resources/static/news.html
+++ b/src/main/resources/static/news.html
@@ -143,7 +143,7 @@
                 .then(data => {
                     data.forEach(element => {
                         const newsElement = document.createElement('div');
-                        newsElement.className = 'news-item'
+                        newsElement.className = 'news-item mb-3'
                         newsElement.id = `news-item-${element.id}`
                         newsElement.innerHTML = generateCard(element);
                         newsContainer.appendChild(newsElement);
