--- a/src/main/resources/static/news.html
+++ b/src/main/resources/static/news.html
@@ -168,7 +168,7 @@
                                 <p class="card-text">${element.body}</p>
                                 <div class="d-flex justify-content-between align-items-start">
                                     <div>
-                                        <p class="card-text"><small class="text-muted">${element.date}</small></p>
+                                        <p class="card-text"><small class="text-muted fs-6 p-3">${element.date}</small></p>
                                     </div>
                                     <div class="d-flex">
                                         <div class="me-2">
@@ -241,7 +241,7 @@
                                 <div class="comment-box border p-3">
                                     <div class="card-title">
                                         <span class="text-primary">${element.user}</span>
-                                        <small class="text-muted fs-6 p-3">${element.date}</small>
+                                        <small class="text-muted p-3">${element.date}</small>
                                     </div>
                                     <div class="p-2">${element.comment}</div>
                                 </div>
