Link voting to backend

--- a/src/main/resources/static/polls.html
+++ b/src/main/resources/static/polls.html
@@ -147,10 +147,10 @@
                     <canvas id="votesChart" style="width:100%; max-width: 600px; margin: 0 auto;"></canvas>
 
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" @click="votePoll('Against')">Vote No</button>
-                    <button type="button" class="btn btn-primary" @click="votePoll('Blank')">Vote Blank</button>
-                    <button type="button" class="btn btn-success" @click="votePoll('Favor')">Vote Yes</button>
+                <div class="modal-footer" id="voting-buttons">
+                    <button type="button" class="btn btn-danger" onclick="votePoll('Against')">Vote No</button>
+                    <button type="button" class="btn btn-primary" onclick="votePoll('Blank')">Vote Blank</button>
+                    <button type="button" class="btn btn-success" onclick="votePoll('Favor')">Vote Yes</button>
                 </div>
             </div>
         </div>
@@ -204,11 +204,11 @@
     <script>
         startDateInput.min = new Date().toISOString().split("T")[0];
         var polls = [];
+        var casted = [];
         var pollsStatus = "Active";
         var pollsLevel = "National";
 
         function createPoll({ level, title, body, startDate, endDate }) {
-
             fetch(`/create-poll?uuid=${localStorage.uuid}`, {
                 method: "POST",
                 body: JSON.stringify({
@@ -222,8 +222,8 @@
                     "Content-type": "application/json; charset=UTF-8"
                 }
             }).then((response) => response.json()).then((data) => {
-                console.log(data);
                 if (data.success == false) {
+                    console.log(data);
                     return;
                 }
                 window.location.reload();
@@ -236,7 +236,7 @@
             if (level == "Regional") url = "regional-polls";
             if (level == "Municipal") url = "municipal-polls";
             pollsStatus = status;
-            console.log(`sending to /${url}?uuid=${localStorage.uuid}&status=${status}`);
+            //console.log(`sending to /${url}?uuid=${localStorage.uuid}&status=${status}`);
             fetch(`/${url}?uuid=${localStorage.uuid}&status=${status}`, {
                 method: "GET",
                 headers: {
@@ -244,7 +244,8 @@
                 }
             }).then((response) => response.json()).then((body) => {
                 if (body.success == true) {
-                    polls = body.data;
+                    polls = body.polls;
+                    casted = body.casted;
                     populatePageWithPolls();
                 } else console.log(body);
             });
@@ -255,7 +256,12 @@
             for (const index in polls) {
 
                 var poll = polls[index];
-                var pills = `<span class="badge rounded-pill" style="background-color: rgb(0, 104, 161);">Voted</span>`;
+                var pills = "";
+
+                if (casted.includes(poll.id)) {
+                    pills += '<span class="badge rounded-pill" style="background-color: rgb(0, 104, 161);">Voted</span>';
+                }
+
                 var greyText = "";
                 if (pollsStatus == "Past") {
                     greyText = "Ended on: " + poll.endDate;
@@ -299,10 +305,18 @@
                 document.getElementById('view-poll-start-date').value = poll.startDate;
                 document.getElementById('view-poll-end-date').value = poll.endDate;
 
-                if (!(new Date(poll.startDate) > new Date())) {
+                var lastDayHasPassed = new Date() > new Date(poll.endDate);
+                var startsInTheFuture = new Date(poll.startDate) > new Date();
+
+                if (casted.includes(poll.id) || lastDayHasPassed || startsInTheFuture)
+                    document.getElementById('voting-buttons').style.display = 'none';
+                else
+                    document.getElementById('voting-buttons').style.display = 'flex';
+
+                if (!startsInTheFuture && (poll.against != 0 || poll.blank != 0 || poll.favor != 0)) {
                     var xValues = ["Against", "Blank", "Favor"];
-                    var yValues = [10, 25, 5];
-                    //var yValues = [poll.against, poll.blank, poll.favor];
+                    //var yValues = [10, 25, 5];
+                    var yValues = [poll.against, poll.blank, poll.favor];
                     var barColors = [
                         "#db3545",
                         "#0068a1",
@@ -334,8 +348,23 @@
 
         function votePoll(choice) {
             if (selectedPoll != null) {
-
-            }
+                fetch(`/cast-vote?uuid=${localStorage.uuid}`, {
+                    method: "POST",
+                    body: JSON.stringify({
+                        id: selectedPoll,
+                        vote: choice
+                    }),
+                    headers: {
+                        "Content-type": "application/json; charset=UTF-8"
+                    }
+                }).then((response) => response.json()).then((data) => {
+                    if (data.success == false) {
+                        console.log(data);
+                        return;
+                    }
+                    window.location.reload();
+                });
+            } console.log("no poll selected...");
         }
 
         getPolls("National", "Active");
