--- a/src/main/resources/static/polls.html
+++ b/src/main/resources/static/polls.html
@@ -44,6 +44,7 @@
             <a class="header-title" href="/">Democracy Now</a>
             <div class="desktop-header-links">
                 <a class="header-link" data-bs-toggle="modal" data-bs-target="#create-poll-modal">Create Poll</a>
+                <a class="header-link header-link2" href="/news.html">News</a>
                 <a class="header-link header-link2"
                     onclick="localStorage.clear(); window.location.replace('/login.html');">Logout</a>
             </div>
