Fix css header line separator

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,7 +34,7 @@
             <a class="header-title" href="/">Democracy Now</a>
             <div class="desktop-header-links">
                 <a class="header-link" href="login.html">Login</a>
-                <a class="header-link header-link2" href="register.html">Register</a>
+                <a class="header-link" href="register.html">Register</a>
             </div>
             <div class="dropdown text-end mobile-header-nav">
                 <a href="#" class="d-block link-body-emphasis text-decoration-none" data-bs-toggle="dropdown"
