--- a/src/main/resources/static/polls.html
+++ b/src/main/resources/static/polls.html
@@ -223,11 +223,9 @@
                     "Content-type": "application/json; charset=UTF-8"
                 }
             }).then((response) => response.json()).then((data) => {
-                if (data.success == false) {
-                    console.log(data);
-                    return;
-                }
-                window.location.reload();
+                if (data.success == true) {
+                    window.location.reload();
+                } console.log(data);
             });
         };
 
